# bee-plugins

./: .gitignore  .pre-commit-config.yaml  CAP-96-root-cause-analysis.md  README.md  build.sh  deploy.py  device.py  devtools.py  pyproject.toml  requirements.txt
.github/workflows/: lint-and-type-check.yml  lint-type-test.yml
beeutil/: __init__.py  image_cache.py
deploy/: __init__.py  deploy.py
fixtures/sf/: 1765835621771_37.79687694312967_-122.39541245010635.json  1765835622771_37.796935309476176_-122.39546641643955.json  1765835623803_37.7969932104318_-122.39552062062103.json  1765835624864_37.7970511333029_-122.3955748291387.json  1765835625954_37.797109135089656_-122.39562868062261.json  1765835627055_37.797168188960654_-122.39568300006505.json  1765835628127_37.79722714523854_-122.39573663818383.json  1765835629203_37.79728529905214_-122.39578942470156.json  1765835630308_37.7973430048297_-122.39584309519041.json  1765835631440_37.79740062938371_-122.39589669573822.json  1765835632608_37.79745836347704_-122.39595084776076.json  1765835633709_37.79751555742527_-122.3960047047477.json  1765835634706_37.79757446105356_-122.39605908929909.json  1765835635577_37.797632907996146_-122.39611198195158.json  1765835636409_37.79769422696345_-122.39616709063418.json  1765835637203_37.79775391121636_-122.3962206656917.json  1765835637988_37.79781170303338_-122.3962728912596.json  1765835638776_37.797869988027706_-122.3963255016501.json  1765835639542_37.79792995672406_-122.39638035171899.json  1765835640278_37.79799107363039_-122.39643582614286.json  1765835640985_37.79805059023165_-122.39648902783563.json  1765835641710_37.798111331960975_-122.39654220941152.json  1765835642445_37.79817128848764_-122.39659458559957.json  1765835643207_37.79823344593883_-122.39664852911746.json  1765835643957_37.798293243607674_-122.39670096739458.json  1765835644677_37.798350509108026_-122.39675179275692.json  1765835645306_37.79840001008778_-122.3967957728182.json  1765835646052_37.798458188924215_-122.39684749418691.json  1765835646865_37.79851719533124_-122.39690173453296.json  1765835647836_37.79857348639074_-122.39695722676666.json  1765835649204_37.798626357345924_-122.39701923733271.json  1765835651134_37.7986787479273_-122.39708100180115.json  1765835688963_37.798759937068354_-122.39715311001773.json  1765835690553_37.79881831413603_-122.3972062225281.json  1765835691905_37.79887701376277_-122.39725979395236.json  1765835693108_37.79893626546705_-122.3973128164186.json  1765835694288_37.798995398781145_-122.39736453846436.json  1765835695488_37.79905503299457_-122.39741532519056.json  1765835696722_37.79911440813909_-122.3974652068869.json  1765835698076_37.79916991813569_-122.39752224966115.json  (+30 more)
fixtures/tokyo/: 1767829483136_35.657820683722434_139.73218529114385.json  1767829485060_35.657889892462855_139.7321957333132.json  1767829486547_35.6579628227161_139.7322056460571.json  (+64 more)
src/beeutil/: exif.py  (+10 more)
tests/: test_embeddings.py  test_recordings.py  test_video_cache.py
util/: __init__.py  observation_dump.py  state_dump.py  test_device_health.py  test_secrets.py  upload_secrets.py
(+3 files in other folders)
